--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="about_menu_string">About</string>
+    <string name="decrement_string">Decrement</string>
+    <string name="reset_string">Reset</string>
 </resources>
